Fix an alignment problem in welcome page

--- a/client/src/app/welcome/welcome.component.css
+++ b/client/src/app/welcome/welcome.component.css
@@ -88,7 +88,7 @@ button {
 
   @media screen and (min-height: 685px) {
     .morrisAddress {
-      width: 99.8%;
+      width: 99.25%;
       text-align: center;
       position: absolute;
       bottom: 20px;
@@ -110,7 +110,7 @@ button {
 
   @media screen and (min-height: 480px) {
     .morrisAddress {
-      width: 99.8%;
+      width: 99.25%;
       text-align: center;
       position: absolute;
       bottom: 35px;
